@@ -19,16 +19,24 @@
       <label index="tx_quickshop_categories.title_lang_ol">Translations (i.e. fr:Traduction|de:Übersetzung)</label>
       <label index="tx_quickshop_categories.uid_parent">Superior Category</label>
       <label index="tx_quickshop_products">Quick Shop Item</label>
-      <label index="tx_quickshop_products.div.product">Item</label>
-      <label index="tx_quickshop_products.div.price_quantity">Price <![CDATA[&]]> quantity</label>
-      <label index="tx_quickshop_products.div.image">Images</label>
       <label index="tx_quickshop_products.div.control">Controlling</label>
+      <label index="tx_quickshop_products.div.datasheet">Data sheet</label>
+      <label index="tx_quickshop_products.div.filter">Filter</label>
+      <label index="tx_quickshop_products.div.image">Images</label>
+      <label index="tx_quickshop_products.div.price_quantity">Price <![CDATA[&]]> quantity</label>
+      <label index="tx_quickshop_products.div.product">Item</label>
       <label index="tx_quickshop_products.div.seo">Search Engines</label>
       <label index="tx_quickshop_products.sku">Item ID</label>
       <label index="tx_quickshop_products.title">Item label</label>
       <label index="tx_quickshop_products.short">Short</label>
+      <label index="tx_quickshop_products.datasheet">Data sheet</label>
       <label index="tx_quickshop_products.description">Description</label>
       <label index="tx_quickshop_products.category">Category</label>
+      <label index="tx_quickshop_products.categoryEnable">Enabled</label>
+      <label index="tx_quickshop_products.dimension">Size</label>
+      <label index="tx_quickshop_products.dimensionEnable">Enabled</label>
+      <label index="tx_quickshop_products.material">Material</label>
+      <label index="tx_quickshop_products.materialEnable">Enabled</label>
       <label index="tx_quickshop_products.price">Gross price</label>
       <label index="tx_quickshop_products.tax.I.0">Reduced</label>
       <label index="tx_quickshop_products.tax.I.1">Normal</label>
@@ -53,16 +61,24 @@
       <label index="tx_quickshop_categories.title_lang_ol">Übersetzungen (z.B. en:Translation|fr:Traduction)</label>
       <label index="tx_quickshop_categories.uid_parent">Übergeordnete Kategorie</label>
       <label index="tx_quickshop_products">Quick Shop Artikel</label>
-      <label index="tx_quickshop_products.div.product">Artikel</label>
-      <label index="tx_quickshop_products.div.price_quantity">Preis <![CDATA[&]]> Mengen</label>
-      <label index="tx_quickshop_products.div.image">Abbildungen</label>
       <label index="tx_quickshop_products.div.control">Steuerung</label>
+      <label index="tx_quickshop_products.div.datasheet">Datenblatt</label>
+      <label index="tx_quickshop_products.div.filter">Filter</label>
+      <label index="tx_quickshop_products.div.image">Abbildungen</label>
+      <label index="tx_quickshop_products.div.price_quantity">Preis <![CDATA[&]]> Mengen</label>
+      <label index="tx_quickshop_products.div.product">Artikel</label>
       <label index="tx_quickshop_products.div.seo">Suchmaschinen</label>
       <label index="tx_quickshop_products.sku">Artikelnummer</label>
       <label index="tx_quickshop_products.title">Artikelbezeichnung</label>
       <label index="tx_quickshop_products.short">Kurzbeschreibung</label>
+      <label index="tx_quickshop_products.datasheet">Datenblatt</label>
       <label index="tx_quickshop_products.description">Beschreibung</label>
       <label index="tx_quickshop_products.category">Kategorie</label>
+      <label index="tx_quickshop_products.categoryEnable">Aktivieren</label>
+      <label index="tx_quickshop_products.dimension">Gr<![CDATA[&oouml;&szlig;]]>e</label>
+      <label index="tx_quickshop_products.dimensionEnable">Aktivieren</label>
+      <label index="tx_quickshop_products.material">Material</label>
+      <label index="tx_quickshop_products.materialEnable">Aktivieren</label>
       <label index="tx_quickshop_products.price">Bruttopreis</label>
       <label index="tx_quickshop_products.quantity_min">Mindestbestellmenge</label>
       <label index="tx_quickshop_products.quantity_max">Höchstbestellmenge</label>
